--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ name: Super-Linter
 
 on: 
   push:
-    branches: ["dev"]
+    branches: ["Dev"]
   pull_request:
-    branches: ["dev"]
+    branches: ["Dev"]
 
 jobs:
   super-lint:
