--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ name: Super-Linter
 
 on: 
   push:
-    branches: ["Dev"]
+    branches: ["main"]
   pull_request:
-    branches: ["Dev"]
+    branches: ["main"]
 
 jobs:
   super-lint:
@@ -18,5 +18,5 @@ jobs:
       - name: Run Super-Linter
         uses: github/super-linter@v4
         env:
-          DEFAULT_BRANCH: Dev
+          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
