--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file src/main/Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file backend/src/main/Dockerfile --tag my-image-name:$(date +%s)
