--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,35 +1,44 @@
-version: '3.7'
+version: '3.8'
 services:
-  frontend:
-    build: ./frontend
-    ports:
-      - 3000:3000
-    networks:
-      - mynetwork
-
   backend:
-    build: ./backend
-    ports:
-      - 8080:8080
-    environment:
-      - MYSQL_HOST=db
+    build: backend
+    restart: always
     depends_on:
       - db
+    environment:
+      MYSQL_ROOT_PASSWORD: db-57xsl
+      MYSQL_DATABASE: mydatabase
+      MYSQL_USER: root
+      MYSQL_PASSWORD: db-57xsl
+    networks:
+       - mynetwork
+    ports:
+     - 8080:8080
+  
+
+ db:
+    image: mysql:8.0.27
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: db-57xsl
+      MYSQL_DATABASE: mydatabase
+      MYSQL_USER: root
+      MYSQL_PASSWORD: db-57xsl
+    volumes:
+      - data:/var/lib/mysql
+    ports:
+      - 3306:3306
     networks:
       - mynetwork
 
-  db:
-    image: mysql:latest
+  frontend:
+    build: frontend
     ports:
-      - 3306:3306
-    environment:
-      - MYSQL_ROOT_PASSWORD=db-57xsl
-      - MYSQL_DATABASE=example
-    volumes:
-      - ./db-data:/var/lib/mysql
-    networks:
-      - mynetwork
+      - 3000:3000
 
 networks:
   mynetwork:
     driver: bridge
+
+volumes:
+  data:
