--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,11 +22,11 @@ services:
       - MYSQL_DATABASE=example
       - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db-password
     restart: always
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
-      interval: 3s
-      retries: 5
-      start_period: 30s
+    #healthcheck:
+      #test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
+      #interval: 3s
+      #retries: 5
+      #start_period: 30s
     secrets:
       - db-password
     volumes:
