--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,3 +27,8 @@ services:
       - MYSQL_DATABASE=example
     volumes:
       - ./db-data:/var/lib/mysql
+     networks:
+      - mynetwork
+
+networks:
+  mynetwork:  
