--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
   backend:
     build: ./backend
     ports:
-      - 8084:8084
+      - 8080:8080
     environment:
       - MYSQL_HOST=db
     depends_on:
@@ -27,8 +27,9 @@ services:
       - MYSQL_DATABASE=example
     volumes:
       - ./db-data:/var/lib/mysql
-     networks:
+    networks:
       - mynetwork
 
 networks:
-  mynetwork:  
+  mynetwork:
+    driver: bridge
